# smithy-rs-lambda-cdk

./: .gitmodules  readme.md
cdk/: .eslintrc.json  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: lambdaStack.ts
simple-service/: .gitignore  Cargo.toml
smithy/: .gitignore  gradle.properties  settings.gradle.kts
smithy/model/: build.gradle.kts  main.smithy  smithy-build.json
